RESOLVED FIXED219515
[LFC][Integration] REGRESSION: Event handler region is wrong
https://bugs.webkit.org/show_bug.cgi?id=219515
Summary [LFC][Integration] REGRESSION: Event handler region is wrong
Simon Fraser (smfr)
Reported 2020-12-03 15:35:49 PST
Created attachment 415360 [details] Testcase Attached testcase has some event region leaking out of the element for the inline text.
Attachments
Testcase (702 bytes, text/html)
2020-12-03 15:35 PST, Simon Fraser (smfr)
no flags
Screenshot (544.77 KB, image/png)
2020-12-03 15:36 PST, Simon Fraser (smfr)
no flags
Patch (4.49 KB, patch)
2020-12-14 20:18 PST, alan
no flags
Patch (7.30 KB, patch)
2020-12-15 08:12 PST, alan
no flags
Patch (7.24 KB, patch)
2020-12-15 09:16 PST, alan
no flags
Simon Fraser (smfr)
Comment 1 2020-12-03 15:36:01 PST
Created attachment 415361 [details] Screenshot
Simon Fraser (smfr)
Comment 2 2020-12-03 15:38:15 PST
In LineLayout::paint() the event region is built using visualOverflowRect but it looks like that needs to be offset with paintOffset.
Radar WebKit Bug Importer
Comment 3 2020-12-03 15:39:59 PST
alan
Comment 4 2020-12-14 20:18:51 PST
alan
Comment 5 2020-12-15 08:12:37 PST
alan
Comment 6 2020-12-15 09:16:26 PST
EWS
Comment 7 2020-12-15 09:47:52 PST
Committed r270848: <https://trac.webkit.org/changeset/270848> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416254 [details].
Note You need to log in before you can comment on or make changes to this bug.