[LFC][Integration] REGRESSION: Event handler region is wrong https://bugs.webkit.org/show_bug.cgi?id=219515 <rdar://problem/71955706>

Reviewed by Antti Koivisto.

Source/WebCore:

Event regions need to include the paint offset the same way painting does.

Test: fast/scrolling/mac/event-region-is-leaking-out.html

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::paint):

LayoutTests:

* fast/scrolling/mac/event-region-is-leaking-out-expected.txt: Added.
* fast/scrolling/mac/event-region-is-leaking-out.html: Added.
progressions:
* tiled-drawing/scrolling/non-fast-region/wheel-handler-in-overflow-scroll-expected.txt:
* tiled-drawing/scrolling/non-fast-region/wheel-handler-region-basic-expected.txt:


Canonical link: https://commits.webkit.org/232489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270848 268f45cc-cd09-0410-ab3c-d52691b4dbfc